# ccspec

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CPPLINT.cfg  LICENSE  Makefile  README.md  biicode.cmake  biicode.conf  ccspec
demo/: CMakeLists.txt  demo.cc
include/: ccspec.h  matcher.cc  matcher.h
include/ccspec/: core.h  expectation.h  expectation_target.cc  expectation_target.h  matcher.cc  matcher.h  matchers.h  unary_matcher.h
include/ccspec/core/: example.h  example_group.h  execution_result.h  formatter.h  formatters.h  hooks.h  reporter.h  unexpected_throw.h
include/ccspec/expectation/: exception.h  expectation_target.cc  expectation_target.h  mismatch.cc  mismatch.h  target.cc  (+3 more)
include/matchers/: eq.cc  eq.h
script/: update_cmake.bash  update_compilers.bash
spec/: CMakeLists.txt  ccspec_spec.cc
spec/core/: execution_result_spec.cc  unexpected_throw_spec.cc
spec/expectation/: mismatch_spec.cc  unexpected_match_spec.cc
spec/matchers/: be_compared_to_spec.cc  be_falsey_spec.cc  be_something_spec.cc  be_spec.cc  be_truthy_spec.cc  contain_spec.cc  eq_spec.cc  match_spec.cc
spec/support/: exception_spec.cc  inspect_spec.cc
src/: CMakeLists.txt  ccspec.cc  ccspec.d
src/core/: example.cc  example_group.cc  execution_result.cc  formatter.cc  hooks.cc  reporter.cc  unexpected_throw.cc
src/core/formatters/: documentation_formatter.cc  progress_formatter.cc  text_formatter.cc
src/expectation/: exception.cc  unexpected_throw.cc
src/matchers/: be_falsey.cc  be_something.cc  be_truthy.cc
src/support/: exception.cc  inspect.cc
(+14 files in other folders)
